# internal/wave/httpserver/handlers/message/internal/send/request.go
@@ -8,5 +8,5 @@ import (
 type MessageSend struct {
 	ChatId          uuid.UUID     `json:"chatId" validate:"required"`
 	Content         model.Content `json:"content" validate:"required"`
-	ParentMessageId *uuid.UUID    `json:"parent_message_id"`
+	ParentMessageId *uuid.UUID    `json:"parentMessageId"`
 }
